# agentmesh

./: .gitignore  README-cn.md  README.md  install.sh  pyproject.toml  uninstall.sh
docs/product/: PRD.md  quick-start.md  roadmap.md
human/: require.md
src/agentmesh/: __init__.py  main.py  mcp_server.py  pty_io.py  pty_launcher.py  registry.py  socket_client.py  socket_server.py  tmux_injector.py
tests/: conftest.py  test_mcp_tools.py  test_pty_io.py  test_registry.py  test_socket.py
